# CSAntiRecoil

./: AntiRecoilEngine.cpp  AntiRecoilEngine.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConsoleUI.cpp  ConsoleUI.h  InputManager.cpp  InputManager.h  LICENSE  PatternLoader.cpp  PatternLoader.h  app.manifest  main.cpp
data/: config.json
data/patterns/: ak47.json  m4a4.json
utils/: Logger.cpp  Logger.h  StringUtils.cpp  StringUtils.h
